增加图片上传及缩略图功能

--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -115,6 +115,12 @@
                     </td>
                 </tr>-->
                 <tr>
+                    <td class="label">商品图片：</td>
+                    <td>
+                        <input type="file" name="logo"/>
+                    </td>
+                </tr>
+                <tr>
                     <td class="label">商品简单描述：</td>
                     <td>
                         <textarea name="goods_desc" id="goods_desc"></textarea>
